--- a/client/mapbox.css
+++ b/client/mapbox.css
@@ -427,9 +427,10 @@
 	        transform: rotate(45deg);
 	}
 .leaflet-popup-content-wrapper, .leaflet-popup-tip {
-	background: white;
+	color: #bbb;
+	/*background: white;
 
-	box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+	box-shadow: 0 3px 14px rgba(0,0,0,0.4);*/
 	}
 .leaflet-container a.leaflet-popup-close-button {
 	position: absolute;
@@ -618,8 +619,8 @@ a.mapbox-icon-twitter {
 
 .leaflet-popup-content-wrapper {
     border-radius: 2px;
-    -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.15);
-    box-shadow:0 1px 2px rgba(0,0,0,0.15);
+    /*-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.15);
+    box-shadow:0 1px 2px rgba(0,0,0,0.15);*/
     pointer-events: all;
 }
 
@@ -634,8 +635,8 @@ a.mapbox-icon-twitter {
 }
 
 .leaflet-popup-tip {
-    -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.15);
-    box-shadow:0 1px 2px rgba(0,0,0,0.15);
+    /*-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.15);
+    box-shadow:0 1px 2px rgba(0,0,0,0.15);*/
 }
 
 
