--- a/client/style.css
+++ b/client/style.css
@@ -116,7 +116,7 @@ header #title{
 
 #tagfield, #copytext, #tag-list li {
     font-family: Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: 1.2em;
 }
 
 footer{
@@ -138,7 +138,17 @@ footer{
 }
 
 #tag-list li {
+    font-style: italic;
     padding-right: 0.5em;
     display: inline;
     color: #f00;
+}
+
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    color: #f00;
+    font-style: italic;
+}
+
+.leaflet-marker-icon:not(.leaflet-clickable) {
+    pointer-events: none;
 }
